# TukxelPP

./: .gitignore  .gitmodules  CMakeLists.txt  Icon.aps  Icon.rc  README.md  lol.txt
Tukxel++/: CMakeLists.txt
Tukxel++/Headers/: Camera.hpp  DllHandle.hpp  Math.hpp  Mesh.hpp  Object.hpp  Shader.hpp  Tukxel++.hpp  Util.hpp
Tukxel++/Shaders/: FragmentShader.frag  VertexShader.vert
Tukxel++/Sources/: Tukxel++.cpp
include/glad/: glad.h
includes/GLFW/: glfw3.h  glfw3native.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/: fragment.frag  vertex.vert
source/: Tukxel++.hpp  client.cpp  client.h  global.h  main.cpp
source/client/: Client.cpp  Client.h
source/client/render/: mesh.h  shader.cpp  shader.h  texture.h  voxel.cpp  voxel.h
source/engine/: chunk.cpp  chunk.h  mesh.h  shader.cpp  shader.h  texture.h
source/util/: array.h
source/world/: chunk.cpp  chunk.h
src/: CMakeLists.txt  Tukxel++.cpp  Tukxel++.h  stb_image.h
src/Tukxel++ Core/: Shader.h  Tukxel++.cpp  Tukxel++.h
src/Tukxel++Core/: Shader.h  Tukxel++.cpp  Tukxel++.h
src/res/shaders/: VertexShader.txt
src/shaders/: FragmentShader.txt  VertexShader.txt
